o fixed dialog problems   - inaccessible textfields after closing modal dialogs   - cursor not visible in textfields on modal dialogs when using sam in FF
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings3/trunk@3862 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/wings/src/res/org/wings/plaf/css/all.css
+++ b/wings/src/res/org/wings/plaf/css/all.css
@@ -753,6 +753,7 @@ table.DivisionContent {
     -moz-opacity:0.1;
     background-color:#000000;
     filter:alpha(opacity=10);
+    overflow:hidden;
 }
 
 .yui-skin-sam .yui-panel .hd {
@@ -810,7 +811,7 @@ table.DivisionContent {
 	height:15px !important;
 	position:absolute !important;
 	top:0 !important;
-	width:25px !important;	
+	width:25px !important;
 	z-index:1 !important;
 }
 
